--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -17,6 +17,8 @@ jobs:
             tag: 15.3
           - version: leap:15.4
             tag: 15.4
+          - version: leap:15.5
+            tag: 15.5
           - version: tumbleweed
             tag: latest
 
